--- a/examples/trials/network_morphism/imagenet/config.yml
+++ b/examples/trials/network_morphism/imagenet/config.yml
@@ -1,10 +1,11 @@
 authorName: default
 experimentName: example_imagenet-network-morphism-test
-trialConcurrency: 14
-maxExecDuration: 12h
-maxTrialNum: 30000
+trialConcurrency: 2
+maxExecDuration: 3h
+maxTrialNum: 30
 trainingServicePlatform: local
 useAnnotation: false
+logLevel: trace
 tuner:
   #choice: TPE, Random, Anneal, Evolution, BatchTuner, NetworkMorphism
   #SMAC (SMAC should be installed through nnictl)
@@ -21,15 +22,18 @@ tuner:
     #number of classes
     n_output_node: 1000
 trial:
-  command: CUDA_VISIBLE_DEVICES=0,1,2,3,4,5,6,7 \
-           srun -N 1 -n 1 --ntasks-per-node=1 --cpus-per-task=30 \
+  command: CUDA_VISIBLE_DEVICES=0 \
+           /mnt/zoltan/public/dataset/imagenet/submitter.py \
            python3 imagenet_train.py \
-           --slave 14 \
-           --ip 10.133.75.11 \
+           --slave 2 \
+           --ip 172.23.33.30 \
            --batch_size 448 \
-           --num_parallel_calls 48 \
-           --train_data_dir /gdata/ILSVRC2012/ImageNet-Tensorflow/train_tfrecord \
-           --val_data_dir /gdata/ILSVRC2012/ImageNet-Tensorflow/validation_tfrecord 
+           --warmup_1 2 --warmup_2 3 --warmup_3 3 --epoch 10 \
+           --initial_lr 1e-1 \
+           --final_lr 0 \
+           --num_parallel_calls 30 \
+           --train_data_dir /mnt/zoltan/public/dataset/imagenet/final/train/ \
+           --val_data_dir /mnt/zoltan/public/dataset/imagenet/final/val/ 
 
   codeDir: .
   gpuNum: 0
