--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-dill==0.3.2
+dill==0.3.4
 jinja2==2.11.2
 Keras==2.1.6
 matplotlib==3.0.3
-numpy==1.18.5
+numpy==1.18.4
 scipy==1.4.1
 six==1.12.0
 tensorboard==2.2.0
@@ -11,3 +11,4 @@ torch==1.2.0
 zmq==0.0.0
 gpustat==0.4.1
 joblib==0.14.1
+Django==2.2.25
