--- a/src/nni_manager/package.json
+++ b/src/nni_manager/package.json
@@ -19,7 +19,7 @@
     "js-base64": "^2.4.9",
     "kubernetes-client": "^6.5.0",
     "rx": "^4.1.0",
-    "sqlite3": "^4.0.2",
+    "sqlite3-offline": "4.3.1",
     "ssh2": "^0.6.1",
     "stream-buffers": "^3.0.2",
     "tail-stream": "^0.3.4",
