--- a/examples/trials/network_morphism/imagenet/config.yml
+++ b/examples/trials/network_morphism/imagenet/config.yml
@@ -1,11 +1,13 @@
 authorName: default
 experimentName: example_imagenet-network-morphism-test
 trialConcurrency: 1
-maxExecDuration: 3h
-maxTrialNum: 6
+maxExecDuration: 12h
+maxTrialNum: 6000
+#choice: local, remote, pai
 trainingServicePlatform: local
+#searchSpacePath: search_space.json
+#choice: true, false
 useAnnotation: false
-logLevel: trace
 tuner:
   #choice: TPE, Random, Anneal, Evolution, BatchTuner, NetworkMorphism
   #SMAC (SMAC should be installed through nnictl)
@@ -22,17 +24,18 @@ tuner:
     #number of classes
     n_output_node: 1000
 trial:
-  command: CUDA_VISIBLE_DEVICES=0 \
-           python3 imagenet_train.py \
-           --slave 1 \
-           --ip 172.23.33.30 \
-           --batch_size 48 \
-           --warmup_1 2 --warmup_2 3 --warmup_3 4 --epoch 10 \
-           --initial_lr 1e-1 \
-           --final_lr 0 \
-           --num_parallel_calls 10 \
-           --train_data_dir /mnt/zoltan/public/dataset/final/train/ \
-           --val_data_dir /mnt/zoltan/public/dataset/final/val/ 
-
-  codeDir: .
-  gpuNum: 0
+    command: NPU_NUM=8 \
+             srun -N 1 -n 1 --ntasks-per-node=1 --cpus-per-task=191 \
+             python3 imagenet_train.py \
+             --slave 1 \
+             --ip 172.17.0.2 \
+             --batch_size 256 \
+             --train_data_dir /home/data/train/ \
+             --val_data_dir /home/data/val/ \
+             --epochs 60 \
+             --warmup_1 15 \   
+             --warmup_2 30 \   
+             --warmup_3 45
+             
+    codeDir: .
+    gpuNum: 0
