--- a/examples/trials/network_morphism/imagenet/config.yml
+++ b/examples/trials/network_morphism/imagenet/config.yml
@@ -1,7 +1,7 @@
 authorName: default
 experimentName: example_imagenet-network-morphism-test
-trialConcurrency: 1
-maxExecDuration: 12h
+trialConcurrency: 8
+maxExecDuration: 24h
 maxTrialNum: 6000
 #choice: local, remote, pai
 trainingServicePlatform: local
@@ -24,17 +24,18 @@ tuner:
     #number of classes
     n_output_node: 1000
 trial:
-    command: NPU_NUM=1 \
+    command: NPU_NUM=8 \
+             OBSHOME=obs://aiperf/aiperf/runlog \
              python3 imagenet_train.py \
-             --slave 1 \
+             --slave 8 \
              --ip 127.0.0.1 \
              --batch_size 256 \
-             --train_data_dir /home/ma-user/work/train/ \
-             --val_data_dir /home/ma-user/work/val/ \
-             --epochs 60 \
-             --warmup_1 2 \   
-             --warmup_2 30 \   
-             --warmup_3 45
+             --train_data_dir /home/ma-user/modelarts/inputs/data_1/train/ \
+             --val_data_dir /home/ma-user/modelarts/inputs/data_1/val/ \
+             --epochs 150 \
+             --warmup_1 100 \   
+             --warmup_2 125 \   
+             --warmup_3 150
              
     codeDir: .
     gpuNum: 0
