--- a/examples/trials/network_morphism/imagenet/config.yml
+++ b/examples/trials/network_morphism/imagenet/config.yml
@@ -1,6 +1,6 @@
 authorName: default
 experimentName: example_imagenet-network-morphism-test
-trialConcurrency: 113
+trialConcurrency: 1
 maxExecDuration: 24h
 maxTrialNum: 6000
 #choice: local, remote, pai
@@ -24,14 +24,14 @@ tuner:
     #number of classes
     n_output_node: 1000
 trial:
-    command: NPU_NUM=8 \
-             OBSHOME=obs://aiperf/aiperf/runlog \
+    command: NPU_NUM=${AIPERF_NPU_NUM_PER_NODE} \
+             OBSHOME=obs://${AIPERF_OBS_WORKDIR}/runlog \
              python3 imagenet_train.py \
-             --slave 113 \
-             --ip 127.0.0.1 \
+             --slave 1 \
+             --ip ${AIPERF_MASTER_IP} \
              --batch_size 256 \
-             --train_data_dir /home/ma-user/modelarts/inputs/data_1/train/ \
-             --val_data_dir /home/ma-user/modelarts/inputs/data_1/val/ \
+             --train_data_dir /home/ma-user/modelarts/inputs/data_0/train/ \
+             --val_data_dir /home/ma-user/modelarts/inputs/data_0/val/ \
              --epochs 150 \
              --warmup_1 150 \   
              --warmup_2 150 \   
