--- a/requirements_slave.txt
+++ b/requirements_slave.txt
@@ -1,8 +1,15 @@
 zmq
-sklearn
+scikit-learn
 psutil
 dill
 
-#手动安装对应版本
-#torch
-#tensorflow
+# for pynni
+hyperopt==0.1.2
+json_tricks
+numpy
+scipy
+coverage
+
+# 根据具体环境手动安装tensorflow/pytorch, 例如
+# python3 -m pip install torch torchvision torchaudio --extra-index-url https://download.pytorch.org/whl/cpu
+# python3 -m pip install tensorflow=2.6.0
